install/ts: run gcov from lib directory
"gcov" results were not correctly produced anymore when run from outside
lib directory with -o option. So run "gcov" directly within lib
directory.

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -103,7 +103,7 @@ task:
   << : *BUILD_INSTALL_TEST_TEMPLATE
   coverage_script:
     - for f in tcl/*.tcl; do script/nglfar2ccov $f; done
-    - gcov -o lib envmodules
+    - cd lib; gcov envmodules; cd ..
     - curl -Os https://uploader.codecov.io/latest/macos/codecov
     - chmod +x codecov
     - arch -x86_64 ./codecov -t ${CODECOV_TOKEN}
