--- a/.github/workflows/linux_tests.yaml
+++ b/.github/workflows/linux_tests.yaml
@@ -44,7 +44,8 @@ jobs:
           for f in tcl/*.tcl; do
             script/nglfar2ccov $f
           done
-          gcov -o lib envmodules
+          cd lib
+          gcov envmodules
       - name: Uninstall Modules
         run: |
           make uninstall
@@ -103,7 +104,8 @@ jobs:
           for f in tcl/*.tcl; do
             script/nglfar2ccov $f
           done
-          gcov -o lib envmodules
+          cd lib
+          gcov envmodules
       - name: Uninstall Modules
         run: |
           make uninstall
@@ -162,7 +164,8 @@ jobs:
           for f in tcl/*.tcl; do
             script/nglfar2ccov $f
           done
-          gcov -o lib envmodules
+          cd lib
+          gcov envmodules
       - name: Uninstall Modules
         run: |
           make uninstall
@@ -219,7 +222,8 @@ jobs:
           for f in tcl/*.tcl; do
             script/nglfar2ccov $f
           done
-          gcov -o lib envmodules
+          cd lib
+          gcov envmodules
       - name: Uninstall Modules
         run: |
           make uninstall
@@ -280,7 +284,8 @@ jobs:
           for f in tcl/*.tcl; do
             script/nglfar2ccov $f
           done
-          gcov -o lib envmodules
+          cd lib
+          gcov envmodules
       - name: Uninstall Modules
         run: |
           make uninstall
