--- a/.github/workflows/linux_tests.yaml
+++ b/.github/workflows/linux_tests.yaml
@@ -363,8 +363,8 @@ jobs:
           # libtclenvmodules build requirements
           sudo apt-get install -y gcc autoconf
           # manually install tcl9.0
-          curl -L --output tcl9.0b2rc2-src.tar.gz http://downloads.sourceforge.net/tcl/tcl9.0b2rc2-src.tar.gz
-          tar xfz tcl9.0b2rc2-src.tar.gz
+          curl -L --output tcl9.0b2-src.tar.gz http://downloads.sourceforge.net/tcl/tcl9.0b2-src.tar.gz
+          tar xfz tcl9.0b2-src.tar.gz
           cd tcl9.0b2/unix
           ./configure
           make -j
