--- a/tcl/main.tcl.in
+++ b/tcl/main.tcl.in
@@ -938,17 +938,7 @@ if {[catch {
    setState inhibit_errreport 0
    # remove any message record id to render next error
    clearAllMsgRecordId
-   # render error if not done yet
-   if {$errorCode ne {MODULES_ERR_RENDERED}} {
-      incrErrorCount
-      renderFalse
-   }
-   # report stack trace in addition to the error message if error is unknown
-   if {$errorCode ni [list MODULES_ERR_RENDERED MODULES_ERR_KNOWN]} {
-      set errMsg "$errorInfo\n[sgr hi {Please report this issue at\
-         https://github.com/cea-hpc/modules/issues}]"
-   }
-   reportError $errMsg
+   reportFinalError $errMsg
    # init error report here in case the error raised before the regular init
    initErrorReport
    flushAndExit 1
