--- a/tcl/report.tcl.in
+++ b/tcl/report.tcl.in
@@ -2143,6 +2143,21 @@ proc isConflictErrorAlreadyReported {msgrecid mod_con_list} {
    }
 }
 
+# Report final error caught on main catch block
+proc reportFinalError {error_msg} {
+   # render error if not done yet
+   if {$::errorCode ne {MODULES_ERR_RENDERED}} {
+      incrErrorCount
+      renderFalse
+   }
+   # report stack trace in addition to the error message if error is unknown
+   if {$::errorCode ni [list MODULES_ERR_RENDERED MODULES_ERR_KNOWN]} {
+      set error_msg "$::errorInfo\n[sgr hi {Please report this issue at\
+         https://github.com/cea-hpc/modules/issues}]"
+   }
+   reportError $error_msg
+}
+
 # ;;; Local Variables: ***
 # ;;; mode:tcl ***
 # ;;; End: ***
