--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -1238,7 +1238,7 @@ proc cmdModuleLoad {context uasked tryload loadany tag_list modulepath_list\
             # loaded prereq as when they were loaded
             if {[llength $deprelist]} {
                lassign [reloadModuleListUnloadPhase deprelist {Unload of\
-                  dependent _MOD_ failed} depun] depreisuasked deprevr\
+                  dependent _MOD_ failed} depre_un] depreisuasked deprevr\
                   depreextratag
                if {[info exists swprocessing]} {
                   if {[info exists swdeprelist]} {
@@ -1605,7 +1605,7 @@ proc cmdModuleUnload {context match auto force onlyureq onlyndep args} {
             # satisfying their constraint.
             if {[llength $deprelist]} {
                lassign [reloadModuleListUnloadPhase deprelist {Unload of\
-                  dependent _MOD_ failed} depun] depreisuasked deprevr\
+                  dependent _MOD_ failed} depre_un] depreisuasked deprevr\
                   depreextratag
             }
 
