Clarify test to report dependent mod loaded message
In case an unload is forced, warn about dependent modules loaded unless
for dependent reload unload phase evaluations.

The existing test to determine whether the warning should be reported or
not is clarified with this change.

As a side effect, warning message is now reported during a reload
command operation. This side effect is not compensated with a specific
test and behavior for reload command. The general idea is to limit the
number of specific behaviors.

--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -1539,9 +1539,7 @@ proc cmdModuleUnload {context match auto force onlyureq onlyndep args} {
                # in case unload is called for a DepRe mechanism do not warn
                # about prereq violation enforced as it is due to the dependent
                # module which is already in a violation state
-               # warn in case of a purge
-               if {$auto || !$force || [currentState commandname] eq\
-                  {purge}} {
+               if {$context ne {depre_un}} {
                   reportWarning [getDepLoadedMsg $prereq_list]
                }
             } else {
