Clarify force argument management in cmdModuleUnload
When force argument of cmdModuleUnload is set to s, it means its value
should be retrieved from force state.

--- a/tcl/main.tcl.in
+++ b/tcl/main.tcl.in
@@ -603,7 +603,7 @@ proc ml {args} {
 
       # first unload specified modules
       if {[llength $modunlist]} {
-         set ret [cmdModuleUnload unload match 1 0 0 0 {*}$modunlist]
+         set ret [cmdModuleUnload unload match 1 s 0 0 {*}$modunlist]
       }
       # then load other modules unless unload phase failed and abort mode
       if {(!$ret || ![commandAbortOnError]) && [llength $modlolist]} {
