--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -536,7 +536,7 @@ proc cmdModuleSwitch {uasked tag_list old {new {}}} {
    }
    ##nagelfar implicitvarcmd {cmdModuleUnload swunload *} oldhidden olduasked\
       oldmsgrecid deprelist depreisuasked deprevr depreextratag
-   set ret_unload [cmdModuleUnload swunload $unload_match 1 0 0 0 $old]
+   set ret_unload [cmdModuleUnload swunload $unload_match 1 s 0 0 $old]
    if {$sticky_reload} {
       lpopState reloading_sticky
    }
@@ -723,7 +723,7 @@ proc cmdModuleRestore {args} {
          super-sticky]]} {
          lappendState reloading_supersticky $mod
       }
-      cmdModuleUnload unload match 0 0 0 0 $mod
+      cmdModuleUnload unload match 0 s 0 0 $mod
       lpopState unloading_sticky
       if {$supersticky_reload} {
          lpopState reloading_supersticky
@@ -1409,7 +1409,7 @@ proc cmdModuleIntUnload {mode args} {
    # if top command is source, consider module load commands made within
    # sourced file evaluation as top load command
    if {[isTopEvaluation]} {
-      set ret [cmdModuleUnload unload match 1 0 0 0 {*}$args]
+      set ret [cmdModuleUnload unload match 1 s 0 0 {*}$args]
    } elseif {$mode eq {load}} {
       # unload mods only on load mode, nothing done on unload mode as the
       # registered conflict guarantees the target module cannot be loaded
@@ -1431,6 +1431,11 @@ proc cmdModuleUnload {context match auto force onlyureq onlyndep args} {
    reportDebug "unloading $args (context=$context, match=$match, auto=$auto,\
       force=$force, onlyureq=$onlyureq, onlyndep=$onlyndep)"
 
+   # inherit force mode from force state if asked through arg
+   if {$force eq {s}} {
+      ##nagelfar ignore Found constant
+      set force [getState force]
+   }
    set ret 0
    lappendState mode unload
    foreach mod $args {
@@ -1534,8 +1539,7 @@ proc cmdModuleUnload {context match auto force onlyureq onlyndep args} {
          set prereq_list [getDependentLoadedModuleList [list $modname]]
          if {[llength $prereq_list] && (![getConf auto_handling] || !$auto)} {
             # force mode should not affect if we only look for mods w/o dep
-            ##nagelfar ignore Found constant
-            if {([getState force] || $force) && !$onlyndep} {
+            if {$force && !$onlyndep} {
                # in case unload is called for a DepRe mechanism do not warn
                # about prereq violation enforced as it is due to the dependent
                # module which is already in a violation state
@@ -1611,12 +1615,11 @@ proc cmdModuleUnload {context match auto force onlyureq onlyndep args} {
             if {[llength $depunlist]} {
                foreach unmod [lreverse $depunlist] {
                   ##nagelfar ignore Found constant
-                  if {[cmdModuleUnload depun match 0 0 0 0 $unmod]} {
+                  if {[cmdModuleUnload depun match 0 s 0 0 $unmod]} {
                      # stop if one unload fails unless force mode enabled
                      set errMsg "Unload of dependent [getModuleDesignation\
                         loaded $unmod] failed"
-                     ##nagelfar ignore Found constant
-                     if {[getState force] || $force} {
+                     if {$force} {
                         reportWarning $errMsg
                      } else {
                         knerror $errMsg
