No auto unload attempt of sticky module
Do not propose currently sticky modules (sticky and force mode disabled
or super-sticky) for automatic unload.

--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -2964,8 +2964,7 @@ proc cmdModuleStash {} {
       # mode is enabled to allow sticky tag unload
       set diff_from_init 0
       foreach mod [getEnvLoadedModulePropertyParsedList name] {
-         if {![isModuleTagged $mod super-sticky 1] && (![isModuleTagged $mod\
-            sticky 1] || [getState force])} {
+         if {![isModuleSticky $mod]} {
             set diff_from_init 1
             break
          }
