Tag loading module auto-loaded prior evaluation
Tag automatically loaded module auto-loaded prior evaluation to be able
to query this state during modulefile evaluation with "module-info
tags".

--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -1264,9 +1264,13 @@ proc cmdModuleLoad {context uasked tryload loadany tag_list modulepath_list\
             }
          }
 
-         # hide auto loaded modules if hide_auto_loaded config is enabled
-         if {!$uasked && [getConf hide_auto_loaded]} {
-            setModuleAndVariantsTag $modname $modnamevr hidden-loaded
+         if {!$uasked} {
+            # set auto-loaded tag now to be able to query it during eval
+            setModuleAndVariantsTag $modname $modnamevr auto-loaded
+            # hide auto loaded modules if hide_auto_loaded config is enabled
+            if {[getConf hide_auto_loaded]} {
+               setModuleAndVariantsTag $modname $modnamevr hidden-loaded
+            }
          }
 
          if {[execute-modulefile $modfile $modname modnamevr $mod $uasked]} {
