--- a/testsuite/modulefiles.4/.modulerc
+++ b/testsuite/modulefiles.4/.modulerc
@@ -57,6 +57,9 @@ if {[info exists ::env(TESTSUITE_STICKY)]} {
         8 {
             module-tag sticky sticky0
         }
+        sym1 {
+            module-version sticky1/2.0 sym
+        }
     }
 }
 
