--- a/testsuite/modulefiles.4/sticky1/.modulerc
+++ b/testsuite/modulefiles.4/sticky1/.modulerc
@@ -17,7 +17,7 @@ if {[info exists ::env(TESTSUITE_STICKY)]} {
             module-alias sticky1/1.5 sticky/1.0
             module-tag sticky sticky1@1:2
         }
-        7 {
+        7 - sym1 {
             module-tag sticky sticky1
         }
     }
