contrib: fix unloading in versions modulefiles
Update *versions* modulefiles generated when --enable-versioning
installation option is set: fix `module unload` commands in these
modulefiles to avoid defining a conflict toward module to unload.

These *versions* modulefiles are broken since Modules 4.2, where the
automated module handling feature has been added.

Existing *versions* modulefiles for Modules 4.2 and upward should be
fixed with the following kind of script:

```
for i in /usr/local/Modules/versions/*; do
    version=$(basename "$i")
    version=$i
    major=${version:0:1}
    minor=${version:2:1}
    if [[ "$major" -gt 4 || ("$major" -eq 4 && "$minor" -gt 1) ]]; then
        sed -i "s|module unload|module unload --not-req|" "$i"
    fi
done
```

Fixes 531

--- a/contrib/modulefiles/version.in
+++ b/contrib/modulefiles/version.in
@@ -14,8 +14,8 @@ set shell [module-info shell]
 
 # get rid of old version
 if {[module-info mode] in {load display}} {
-    module unload null
-    module unload modules
+    module unload --not-req null
+    module unload --not-req modules
     setenv MODULE_VERSION @VERSION@
 }
 
