Distinguish loading from loaded modules when attempting unload
Update error or warning message when attempting to unload a module
required by another. Distinguish if this module is a requirement of an
already loaded or a currently loading module.

--- a/tcl/report.tcl.in
+++ b/tcl/report.tcl.in
@@ -995,6 +995,14 @@ proc getDepLoadedMsg {prelist} {
    return "Dependent [join $predesiglist { and }] $is loaded"
 }
 
+proc getDepLoadingMsg {prelist} {
+   set is [expr {[llength $prelist] > 1 ? {are} : {is}}]
+   foreach pre $prelist {
+      lappend predesiglist [getModuleDesignation loaded $pre]
+   }
+   return "Dependent [join $predesiglist { and }] $is loading"
+}
+
 proc getErrConUnMsg {conlist} {
    set condesiglist {}
    foreach con $conlist {
