install: add --enable-conflict-unload configure option
Introduce the --enable-conflict-unload configure option to choose at
installation time if conflict should be automatically unloaded or not.
Option is disabled by default.

--- a/Makefile.inc.in
+++ b/Makefile.inc.in
@@ -82,6 +82,7 @@ termbg := @termbg@
 
 # automated modules handling
 autohandling := @autohandling@
+conflictunload := @conflictunload@
 
 # implicitly define requirement on module load/module unload modules
 implicitrequirement := @implicitrequirement@
