--- a/site.exp.in
+++ b/site.exp.in
@@ -63,6 +63,7 @@ set install_lightbgcolors "@lightbgcolors@"
 set install_termbg "@termbg@"
 
 set install_autohandling "@autohandling@"
+set install_conflictunload "@conflictunload@"
 
 set install_implicitrequirement "@implicitrequirement@"
 
