--- a/tcl/init.tcl.in
+++ b/tcl/init.tcl.in
@@ -92,7 +92,7 @@ array set g_config_defs [list\
    color {MODULES_COLOR @color@ 0 s {never auto always} {0 1 2}\
       initConfColor}\
    colors {MODULES_COLORS {} 0 l {} {} initConfColors}\
-   conflict_unload {MODULES_CONFLICT_UNLOAD 0 0 b {0 1}}\
+   conflict_unload {MODULES_CONFLICT_UNLOAD @conflictunload@ 0 b {0 1}}\
    csh_limit {{} 4000 0 i}\
    extra_siteconfig {MODULES_SITECONFIG <undef> 1 s {}}\
    editor {MODULES_EDITOR {@editor@} 0 s {} {} initConfEditor}\
