Auto unload dependent on "module unload" modfile cmd
When conflict_unload and auto_handling options are enabled,
automatically unload modules dependent of the module targeted by a
"module unload" modulefile command. Also allow force mode to operate.

--- a/tcl/modfind.tcl.in
+++ b/tcl/modfind.tcl.in
@@ -2321,9 +2321,11 @@ proc areModuleConstraintsSatisfied {{mod {}} {nporeq 0}} {
             break
          }
          # add requirements of depmod to the module to check list
-         ##nagelfar ignore Suspicious variable name
-         foreach lmmodlist [set ${reqListVar}($depmod)] {
-            appendNoDupToList fulllist {*}$lmmodlist
+         ##nagelfar ignore #2 Suspicious variable name
+         if {[info exists ${reqListVar}($depmod)]} {
+            foreach lmmodlist [set ${reqListVar}($depmod)] {
+               appendNoDupToList fulllist {*}$lmmodlist
+            }
          }
       }
    }
