cirrus/gh: add --enable-new-features on two CI test cases

--- a/.github/workflows/linux_tests.yaml
+++ b/.github/workflows/linux_tests.yaml
@@ -196,7 +196,7 @@ jobs:
   tcl86:
     runs-on: ubuntu-20.04
     env:
-      CONFIGURE_OPTS: --with-tclsh=tclsh8.6 --prefix=/tmp/modules --libdir=/tmp/modules/lib64 --enable-multilib-support
+      CONFIGURE_OPTS: --with-tclsh=tclsh8.6 --prefix=/tmp/modules --libdir=/tmp/modules/lib64 --enable-multilib-support --enable-new-features
       COVERAGE: y
       COVERAGE_OLDTCL: y
       COVERAGE_MULTILIB: y
