--- a/tcl/interp.tcl.in
+++ b/tcl/interp.tcl.in
@@ -556,8 +556,8 @@ proc renderModulefileEvalError {itrp mode mod_file failed_eval error_msg} {
 # Raise an error if a conflict violation is detected. This is done after
 # modulefile eval to give it a chance to solve its conflicts during eval
 proc checkModuleConflict {mod_name mod_name_vr} {
-   lassign [doesModuleConflict $mod_name] does_con mod_con_list
-   if {$does_con} {
+   set mod_con_list [getModuleLoadedConflict $mod_name]
+   if {[llength $mod_con_list]} {
       set is_con_mod_conun [isModuleEvaluated conun $mod_name_vr {}\
          {*}$mod_con_list]
       set is_con_mod_loading [is-loading {*}$mod_con_list]
