--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -1226,6 +1226,20 @@ proc cmdModuleLoad {context uasked tryload loadany tag_list modulepath_list\
             $mod]
 
          if {[getConf auto_handling]} {
+            if {[getConf conflict_unload]} {
+               # get loaded conflicting modules and unload them (ConUn)
+               set conun_mod_list [getModuleLoadedConflict $modnamevr]
+               reportDebug "conun mod list is '$conun_mod_list'"
+               if {[llength $conun_mod_list]} {
+                  foreach conun_mod [lreverse $conun_mod_list] {
+                     if {[cmdModuleUnload conun match 1 s 0 $conun_mod]} {
+                        # error message already sent within cmdModuleUnload
+                        knerrorOrWarningIfForced {}
+                     }
+                  }
+               }
+            }
+
             # get loaded modules holding a requirement on modname and able to
             # be reloaded
             set deprelist [getUnmetDependentLoadedModuleList $modnamevr]
